--- a/notebooks/browse_cf_services.ipynb
+++ b/notebooks/browse_cf_services.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -41,7 +42,7 @@
    "outputs": [],
    "source": [
     "# define either \n",
-    "ibm_cloud_user_api_token = None\n",
+    "ibm_cloud_user_api_token = 'yC0_pc0aJ98KUBZnFCDI7-87dkGxUUvjY16-b6bx81nN'\n",
     "# or\n",
     "ibmid = None\n",
     "password = None"
@@ -71,7 +72,28 @@
    "outputs": [],
    "source": [
     "from cfservices.browser import Browser\n",
-    "b = Browser(ibm_cloud_user_api_token=ibm_cloud_user_api_token)"
+    "b = Browser(ibm_cloud_user_api_token=ibm_cloud_user_api_token,\n",
+    "            ibmid=ibmid,\n",
+    "            password=password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# @hidden_cell\n",
+    "# service instance \"Cloudant NoSQL DB-ot\" in org \"ptitzler_org\" space \"dev\"\n",
+    "credentials={\n",
+    "    \"username\": \"a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix\",\n",
+    "    \"password\": \"4343704eccb30d4fe83a7ec12f2e57c9ea1c6dd4a840086a801483a92924b440\",\n",
+    "    \"host\": \"a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix.cloudant.com\",\n",
+    "    \"port\": 443,\n",
+    "    \"url\": \"https://a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix:4343704eccb30d4fe83a7ec12f2e57c9ea1c6dd4a840086a801483a92924b440@a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix.cloudant.com\"\n",
+    "}"
    ]
   },
   {
@@ -88,6 +110,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "pixiedust": {
      "displayParams": {
       "handlerId": "tableView"
