--- a/notebooks/browse_cf_services.ipynb
+++ b/notebooks/browse_cf_services.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# define either \n",
@@ -65,6 +67,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "pixiedust": {
      "displayParams": {}
     }
@@ -75,25 +78,6 @@
     "b = Browser(ibm_cloud_user_api_token=ibm_cloud_user_api_token,\n",
     "            ibmid=ibmid,\n",
     "            password=password)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# @hidden_cell\n",
-    "# service instance \"Cloudant NoSQL DB-ot\" in org \"ptitzler_org\" space \"dev\"\n",
-    "credentials={\n",
-    "    \"username\": \"a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix\",\n",
-    "    \"password\": \"4343704eccb30d4fe83a7ec12f2e57c9ea1c6dd4a840086a801483a92924b440\",\n",
-    "    \"host\": \"a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix.cloudant.com\",\n",
-    "    \"port\": 443,\n",
-    "    \"url\": \"https://a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix:4343704eccb30d4fe83a7ec12f2e57c9ea1c6dd4a840086a801483a92924b440@a5fd8e25-acc3-486f-9366-aa381cb775c0-bluemix.cloudant.com\"\n",
-    "}"
    ]
   },
   {
