--- a/notebooks/browse_cf_services.ipynb
+++ b/notebooks/browse_cf_services.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# define either \n",
-    "ibm_cloud_user_api_token = 'yC0_pc0aJ98KUBZnFCDI7-87dkGxUUvjY16-b6bx81nN'\n",
+    "ibm_cloud_user_api_token = None\n",
     "# or\n",
     "ibmid = None\n",
     "password = None"
